--- a/script/browser/contents/MarkdownEX/index.html
+++ b/script/browser/contents/MarkdownEX/index.html
@@ -10,8 +10,8 @@ body {
   overflow: hidden;
 }
 </style>
-<link rel="stylesheet" href="./css/markdown/github-markdown.css">
-<link rel="stylesheet" href="./css/hljs/github.css">
+<link rel="stylesheet" id="markdown-style" href="./css/markdown/github-markdown.css">
+<link rel="stylesheet" id="hljs-style" href="./css/hljs/github.css">
 <div class="markdown-body"></div>
 <script src="./marked.min.js"></script>
 <script src="./highlight.min.js"></script>
@@ -32,20 +32,50 @@ marked.setOptions({
   },
 });
 
+const linkPrefix = `${location.protocol}//${location.host}`
+const parseParam = param => {
+  const parsed = {};
+
+  let next = param.indexOf('/');
+  if (next == -1) return null;
+  parsed.scale = parseInt(param.substring(0, next), 10) / 100;
+
+  let prev = next + 1;
+  next = param.indexOf('/', prev);
+  if (next == -1) return null;
+  parsed.markdownStyle = `${linkPrefix}/css/markdown/${param.substring(prev, next)}.css`;
+
+  prev = next + 1;
+  next = param.indexOf('/', prev);
+  if (next == -1) return null;
+  parsed.hljsStyle = `${linkPrefix}/css/hljs/${param.substring(prev, next)}.css`;
+
+  parsed.markdown = param.substring(next + 1);
+  return parsed;
+};
+
+const markdownStyle = document.getElementById('markdown-style');
+const hljsStyle = document.getElementById('hljs-style');
 const elem = document.querySelector('div.markdown-body');
 let current = '';
 AviUtlBrowser.registerRenderer(async params => {
-  const delim = params.param.indexOf("/");
-  if (delim == -1) {
+  const param = parseParam(params.param);
+  if (param == null) {
     throw new Error('invalid parameter');
   }
-  const scale = parseInt(params.param.substring(0, delim), 10)/100;
-  elem.style.zoom = scale;
-  const m = params.param.substring(delim+1);
-  if (current == m) {
+
+  elem.style.zoom = param.scale;
+  if (markdownStyle.href !== param.markdownStyle) {
+    markdownStyle.href = param.markdownStyle;
+  }
+  if (hljsStyle.href !== param.hljsStyle) {
+    hljsStyle.href = param.hljsStyle;
+  }
+
+  if (current == param.markdown) {
     return '';
   }
-  current = m;
+  current = param.markdown;
   elem.innerHTML = marked(current);
   MathJax.typeset();
   return '';
