MathJaxのコンポーネントを整理

--- a/script/browser/contents/MarkdownEX/index.html
+++ b/script/browser/contents/MarkdownEX/index.html
@@ -22,7 +22,7 @@ MathJax = {
   },
 };
 </script>
-<script id="MathJax-script" src="./mathjax/tex-chtml.js"></script>
+<script id="MathJax-script" src="./mathjax/tex-chtml-full.js"></script>
 <script type="module">
 const markdownStyle = document.getElementById('markdown-style');
 const hljsStyle = document.getElementById('hljs-style');
